# shrike

./: .gitattributes  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  LIMITATIONS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  TODO.md  V2_ROADMAP.md  V3_ROADMAP.md
.github/workflows/: ci.yml  release.yml
bench/: baseline.txt  bench.sh  cross-tool.md  run-cross-tool.sh
docs/: launch.md  migration-1-to-2.md  migration-2-to-3.md  shrike.1
docs/book/: 01-intro.md  02-taxonomy.md  03-chains.md  04-verification.md  05-cet-awareness.md  README.md
examples/: README.md
examples/recipes/: execve_aarch64.shrike  execve_amd64.shrike  execve_riscv64.shrike
fuzz/: Makefile  fuzz_macho.c  fuzz_pe.c  fuzz_xdec.c
fuzz/corpus/: mov_rax_imm
include/: cet.h  elf64.h  format.h  pivots.h  recipe.h  regidx.h  scan.h  strset.h  xdec.h
include/shrike/: arm64.h  category.h  mips.h  (+17 more)
packaging/: Dockerfile  README.md  shrike.pc.in  shrike.spec
python/: README.md  pyproject.toml  setup.cfg
python/shrike/: __init__.py  cli.py
python/tests/: test_import.py
src/: arm64.c  category.c  cet.c  effect.c  elf64.c  format.c  insn_effect.c  macho.c  main.c  mips.c  pe.c  pivots.c  ppc64.c  recipe.c  regidx.c  riscv.c  sarif.c  scan.c  shrike_api.c  smt.c  strset.c  version.c  warning.c  xdec.c
tests/: Makefile  integration.sh  regression.sh  test_api.c  test_arm64.c  test_category.c  test_cet.c  test_effect.c  test_macho.c  test_pe.c  test_recipe.c  test_regidx.c  test_riscv.c  test_scan.c  test_smt.c  test_version.c  test_xdec.c
tools/: lbr-ingest.py  shrike-gdb.py  shrike-serve.sh
(+8 files in other folders)
